<resources>

    <string name="app_name">SpaceshipGame</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="button_up">up</string>
    <string name="button_left">left</string>
    <string name="button_right">right</string>
    <string name="button_down">down</string>
    <string name="button_attack">attack</string>
    <string name="button_start">Start</string>
    <string name="server">Adres serwera</string>

</resources>