<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <FrameLayout
        android:id="@+id/frameLayout1"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="0dp" >

        <com.example.spaceshipgame.GameView
            android:id="@+id/gameView"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="8dp"
            android:layout_marginTop="2dip"
            android:layout_marginLeft="40dip"
            android:layout_marginRight="2dip"
            android:orientation="horizontal"
            android:weightSum="1" >

            <ProgressBar
                android:id="@+id/lifeProgressBar"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginRight="2dip"
                android:layout_weight="0.5" />

            <ProgressBar
                android:id="@+id/ammunitionProgressBar"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="2dip"
                android:layout_weight="0.5" />

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <ImageButton
                android:id="@+id/leftButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="5dp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/button_left"
                android:src="@drawable/left" />

            <ImageButton
                android:id="@+id/rightButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="5dp"
                android:layout_toRightOf="@+id/leftButton"
                android:background="@android:color/transparent"
                android:contentDescription="@string/button_right"
                android:src="@drawable/right" />

            <ImageButton
                android:id="@+id/downButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/upButton"
                android:layout_marginRight="5dp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/button_down"
                android:src="@drawable/down" />

            <ImageButton
                android:id="@+id/upButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="5dp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/button_up"
                android:src="@drawable/up" />

            <ImageButton
                android:id="@+id/attackButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/upButton"
                android:layout_alignParentRight="true"
                android:layout_marginRight="5dp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/button_attack"
                android:src="@drawable/attack" />
        </RelativeLayout>
    </FrameLayout>

</RelativeLayout>